removed some files

--- a/turbo.json
+++ b/turbo.json
@@ -1,29 +1,23 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalDotEnv": [".env"],
-    "pipeline": {
+    "tasks": {
         "build": {
-            "dotEnv": [".env.production.local", ".env.local", ".env.production", ".env"],
             "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
             "dependsOn": ["^build"]
         },
         "dev": {
-            "dotEnv": [".env.development.local", ".env.local", ".env.development", ".env"],
             "dependsOn": ["^build"],
             "persistent": true,
             "cache": false
         },
         "start": {
-            "dotEnv": [".env.production.local", ".env.local", ".env.production", ".env"],
             "dependsOn": ["^build"],
             "persistent": false,
             "cache": false
         },
         "test": {
-            "dotEnv": [".env.test.local", ".env.test", ".env"],
             "dependsOn": ["//#watch-del"],
-            "outputs": ["coverage/**"],
-            "outputMode": "full"
+            "outputs": ["coverage/**"]
         },
         "test:ui": {
             "cache": false
@@ -41,7 +35,6 @@
             "dependsOn": []
         },
         "//#watch-del": {
-            "outputMode": "none",
             "dependsOn": []
         },
         "clean": { "cache": false },
