--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,8 +13,8 @@
         "db:seed": "ts-node src/scripts/seeder.ts"
     },
     "dependencies": {
-        "@acme/database": "workspace:*",
-        "@acme/utils": "workspace:*",
+        "@repo/database": "workspace:*",
+        "@repo/utils": "workspace:*",
         "@fastify/autoload": "^5.7.1",
         "@fastify/sensible": "^5.2.0",
         "@mgcrea/fastify-request-logger": "^1.1.1",
@@ -26,9 +26,8 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
-        "@acme/eslint-config": "workspace:*",
-        "@acme/jest-presets": "workspace:*",
-        "@acme/tsconfig": "workspace:*",
+        "@repo/eslint-config": "workspace:*",
+        "@repo/typescript-config": "workspace:*",
         "@swc/cli": "^0.1.62",
         "@swc/core": "^1.3.76",
         "@swc/helpers": "^0.5.1",
@@ -45,7 +44,7 @@
         "typescript": "5.1.6"
     },
     "jest": {
-        "preset": "@acme/jest-presets/node",
+        "preset": "@repo/jest-presets/node",
         "testPathIgnorePatterns": [
             "scripts"
         ],
