--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "test": "turbo run test"
     },
     "devDependencies": {
-        "@acme/eslint-config": "workspace:*",
+        "@repo/eslint-config": "workspace:*",
         "dotenv-cli": "^7.2.1",
         "eslint": "^8.47.0",
         "prettier-plugin-tailwindcss": "^0.5.2",
