--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
-    "extends": "@acme/tsconfig/base.json",
+    "extends": "@repo/tsconfig/base.json",
     "compilerOptions": {
         "lib": ["ES2022"],
         "module": "CommonJS",
