--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
-    "extends": "@repo/tsconfig/base.json",
+    "extends": "@repo/typescript-config/base.json",
     "compilerOptions": {
         "lib": ["ES2022"],
-        "module": "CommonJS",
+        "module": "NodeNext",
         "outDir": "./dist",
         "rootDir": "./src"
     },
