--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,7 @@
         "@fastify/sensible": "^5.2.0",
         "@mgcrea/fastify-request-logger": "^1.1.1",
         "@mgcrea/pino-pretty-compact": "^1.3.0",
-        "@repo/database": "workspace:*",
+        "@repo/shared": "workspace:*",
         "@repo/utils": "workspace:*",
         "dotenv": "^16.3.1",
         "fastify": "^4.21.0",
@@ -35,7 +35,7 @@
         "@types/jest": "^29.5.3",
         "@types/node": "^22.5.4",
         "@types/supertest": "^2.0.12",
-        "eslint": "^9.10.0",
+        "eslint": "^8.57.0",
         "jest": "^29.6.2",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
