--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/database",
+    "name": "@repo/shared",
     "version": "0.0.0",
     "private": true,
     "main": "./dist/index.js",
@@ -22,7 +22,6 @@
         "lint": "eslint \"**/*.{ts,tsx}\""
     },
     "dependencies": {
-        "@neondatabase/serverless": "^0.5.7",
         "@repo/utils": "workspace:*",
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.28.2",
@@ -36,7 +35,7 @@
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.5.4",
         "drizzle-kit": "^0.19.12",
-        "eslint": "^9.10.0",
+        "eslint": "^8.57.0",
         "ts-node": "^10.9.1",
         "tsup": "^8.2.4",
         "typescript": "5.6.2"
