--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,18 +3,22 @@
     "version": "0.0.0",
     "private": true,
     "files": [
-        "library.js",
-        "next.js",
-        "react-internal.js",
-        "presets.js"
+        "library.cjs",
+        "next.cjs",
+        "react-internal.cjs",
+        "presets.cjs",
+        "fastify.cjs"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^8.5.0",
-        "@typescript-eslint/parser": "^8.5.0",
-        "@vercel/style-guide": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
+        "@vercel/style-guide": "^5.2.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-config-turbo": "^2.1.1",
+        "eslint-config-turbo": "^2.0.0",
         "eslint-plugin-only-warn": "^1.1.0",
-        "typescript": "^5.6.2"
+        "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "eslint-plugin-simple-import-sort": "^12.1.1"
     }
 }
