--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,17 +13,18 @@
         "db:seed": "ts-node src/scripts/seeder.ts"
     },
     "dependencies": {
-        "@fastify/autoload": "^5.7.1",
+        "@fastify/autoload": "^5.10.0",
         "@fastify/sensible": "^5.2.0",
         "@mgcrea/fastify-request-logger": "^1.1.1",
         "@mgcrea/pino-pretty-compact": "^1.3.0",
         "@repo/shared": "workspace:*",
         "@repo/utils": "workspace:*",
-        "dotenv": "^16.3.1",
+        "@ts-rest/fastify": "^3.51.0",
+        "dotenv": "^16.4.5",
         "fastify": "^4.21.0",
         "fastify-plugin": "^4.5.1",
         "zennv": "^0.1.1",
-        "zod": "^3.21.4"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
