--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,18 +23,19 @@
     },
     "dependencies": {
         "@repo/utils": "workspace:*",
-        "dotenv": "^16.3.1",
-        "drizzle-orm": "^0.28.2",
-        "drizzle-zod": "^0.5.0",
+        "@ts-rest/core": "^3.51.0",
+        "dotenv": "^16.4.5",
+        "drizzle-orm": "^0.33.0",
+        "drizzle-zod": "^0.5.1",
         "postgres": "^3.3.5",
         "zennv": "^0.1.1",
-        "zod": "^3.21.4"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.5.4",
-        "drizzle-kit": "^0.19.12",
+        "drizzle-kit": "^0.24.2",
         "eslint": "^8.57.0",
         "ts-node": "^10.9.1",
         "tsup": "^8.2.4",
