--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,7 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "ui": "tui",
+    "globalEnv": ["DATABASE_URL"],
     "tasks": {
         "build": {
             "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
@@ -8,7 +10,8 @@
         "dev": {
             "dependsOn": ["^build"],
             "persistent": true,
-            "cache": false
+            "cache": false,
+            "env": ["DATABASE_URL"]
         },
         "start": {
             "dependsOn": ["^build"],
